add latest notebook

--- a/2025_06_05_shear_noise/2pt_noise.ipynb
+++ b/2025_06_05_shear_noise/2pt_noise.ipynb
@@ -137,7 +137,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f2f54388830>"
+       "<matplotlib.legend.Legend at 0x7fd822538830>"
       ]
      },
      "execution_count": 5,
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "a1cde5a3",
    "metadata": {},
    "outputs": [
@@ -358,10 +358,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f2f24c06990>"
+       "<matplotlib.legend.Legend at 0x7fd818373d90>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -484,8 +484,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "d02fa3a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tomo_ind|N: 0|33707071\n",
+      "tomo_ind|N: 1|34580888\n",
+      "tomo_ind|N: 2|34646416\n",
+      "tomo_ind|N: 3|36727798\n"
+     ]
+    }
+   ],
+   "source": [
+    "import h5py\n",
+    "\n",
+    "for tomo_ind in range(4):\n",
+    "    with h5py.File(\n",
+    "        \"/astro/u/beckermr/workarea/des-y6-analysis/\"\n",
+    "        \"2025_06_04_double_check_cats/metadetect_2024-11-07.hdf5\", \"r\"\n",
+    "    ) as fp:\n",
+    "        print(f'tomo_ind|N: {tomo_ind}|{fp[\"noshear\"][f\"tomo_bin_{tomo_ind}\"][\"ra\"].shape[0]}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2cdeabf",
    "metadata": {},
    "outputs": [],
    "source": []
